--- a/Views/Home/Quadrants.cshtml
+++ b/Views/Home/Quadrants.cshtml
@@ -2,4 +2,109 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+    ViewData["Title"] = "View Quadrants";
 }
+
+<!--Bring in the model-->
+@model Mission08_3_12.Models.Task
+
+<h1> View Quadrants </h1>
+
+<div class="container">
+    <div class="row">
+
+        <div class="col-12">
+            <h3>Stephen Covey's Time Management Matrix</h3>
+        </div>
+
+    </div>
+
+    <div class="row">
+
+        <div class="col-2"></div>
+
+        <div class="col-5">
+            Urgent
+        </div>
+
+        <div class="col-5">
+            Not Urgent
+        </div>
+
+        <div class="col-2"></div>
+
+    </div>
+
+    <div class="row">
+
+        <div class="col-2">Edit and Delete</div>
+
+        <div class="col-5">
+            Quadrant 1 content
+        </div>
+
+        <div class="col-5">
+            Quadrant 2 content
+        </div>
+
+        <div class="col-2">Edit and Delete</div>
+
+    </div>
+</div>
+
+<!-- This is the form for creating the movie entry-->
+
+<!--
+<div>
+    <form method="post">
+
+        <div asp-validation-summary="All"></div>
+
+        <label> Movie Category: </label>
+        <select asp-for="CategoryId">
+            <option value="">Select a Category</option>
+            @@foreach (Category c in ViewBag.Categories)
+            {
+                <option value="@@c.CategoryId">@@c.CategoryName</option>
+    
+            }
+        </select> <br />
+
+        <label> Movie Title: </label>
+        <input asp-for="Title" /><br />
+
+        <label> Movie Year: </label>
+        <input asp-for="Year" /><br />
+
+        <label> Movie Director: </label>
+        <input asp-for="Director" /><br />
+
+        <label> Movie Rating: </label>
+        <select asp-for="Rating">
+            <option value="">Select</option>
+            <option value="G">G</option>
+            <option value="PG">PG</option>
+            <option value="PG-13">PG-13</option>
+            <option value="R">R</option>
+        </select><br />
+
+
+        <label> Edited: </label>
+        <select asp-for="Edited">
+            <option value="false">Select</option>
+            <option value="true">Yes</option>
+            <option value="false">No</option>
+        </select><br />
+
+
+        <label> Lent to: </label>
+        <input asp-for="LentTo" /><br />
+
+        <label> Movie Notes: </label>
+        <input asp-for="Notes" /><br />
+
+        <button type="submit">Submit Movie Entry</button>
+
+    </form>
+</div>
+    -->
