--- a/Views/Home/AddEditTask.cshtml
+++ b/Views/Home/AddEditTask.cshtml
@@ -8,7 +8,7 @@
 }
 
 <!--Bring in the model-->
-@model Mission08_3_12.Models.Task
+@model Mission08_3_12.Models.TaskModel
 
 <h1> Enter a task here! </h1>
 
