--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,9 +2,19 @@
     ViewData["Title"] = "Task Manager";
 }
 
-<h1> Welcome to Task Manager </h1>
 
-<div>
- <p>Manage your time!</p>
-</div>
+
+<!-- Header-->
+<center>
+    <div>
+        <div class="masthead-content">
+            <div class="container px-5">
+                <h1 class="masthead-heading mb-0">Task Manager</h1>
+
+                <h2 class="masthead-subheading mb-0">Manage your life with this task manager</h2>
+                <a class="btn btn-primary btn-xl rounded-pill mt-5" style="font-size:20px" asp-area="" asp-controller="Home" asp-action="Quadrants">Tasks</a>
+            </div>
+        </div>
+    </div>
+</center>
 
