--- a/Views/Home/Quadrants.cshtml
+++ b/Views/Home/Quadrants.cshtml
@@ -82,7 +82,7 @@
         </div>
         <div class="row">
             <!--Not Important Title-->
-            <div class="col-.5" style="writing-mode: vertical-lr; justify-content: right; padding-bottom: 5px; padding-top: 5px; background-color:lightblue; color:navy"><h4>Unimportant</h4></div>
+            <div class="col-.5" style="writing-mode: vertical-lr; justify-content: right; padding-bottom: 5px; padding-top: 5px; background-color:lightblue; color:navy"><h4>Not Important</h4></div>
             <!--Quadrant 3-->
             <div class="col" style="background-color: #CFF6FF; color: navy; ">
                 <div class="row">
