--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,10 @@
     ViewData["Title"] = "Task Manager";
 }
 
-
+<!--
+    Authors: Kimball Owen, Sawyer Halverson, Mason Frodsham, and Madison Hoyt
+    Description: A program that you can add tasks and mark them off once completed.
+-->
 <center>
     <div>
         <div class="masthead-content">
